Elastic: Fix image in #contactpic element on iOS 9
Looks like some svg in a flex container issue. Changed technique to center the image.

--- a/skins/elastic/styles/styles.less
+++ b/skins/elastic/styles/styles.less
@@ -103,13 +103,13 @@ body.task-error-login #layout {
 /*** Addressbook UI ***/
 
 #contactpic {
-    min-width: @layout-contact-icon-width;
-    min-height: @layout-contact-icon-width;
+    width: @layout-contact-icon-width;
+    height: @layout-contact-icon-width;
     border-radius: .5rem;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display:table-cell;
+    vertical-align:middle;
+    text-align: center;
 
     img {
         max-width: @layout-contact-icon-width;
